--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -169,7 +169,7 @@
             <h2>1 Review</h2>
             <ul>
               <li>
-                <h3>From Ayomide Suara the 15th August, 2022</h3>
+                <h3>From Michael Alem the 15th August, 2022</h3>
                 <p>I love this place. Amazing!</p>
               </li>
             </ul>
@@ -178,7 +178,7 @@
         </section> <!-- end section -->
     </div>
     <footer>
-      <p>Best School</p>
+      <p>Holberton</p>
     </footer>
   </body>
 </html>
