--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -178,7 +178,7 @@
         </section> <!-- end section -->
     </div>
     <footer>
-      <p>Holberton</p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
